blender-git/0-OLDS/0-Error-Compile-2.77.0.20160313.TXT
[ 85%] Building C object source/blender/makesrna/intern/CMakeFiles/bf_rna.dir/rna_fcurve_gen.c.o
/build/blender-git/src/blender/build/source/blender/makesrna/intern/rna_fcurve_gen.c:2665:19: error: conflicting types for 'rna_FKeyframe_points_insert'
 struct BezTriple *rna_FKeyframe_points_insert(struct FCurve *_self, float frame, float value, int keyframe_type, int options);
                   ^
In file included from /build/blender-git/src/blender/build/source/blender/makesrna/intern/rna_fcurve_gen.c:32:0:
/build/blender-git/src/blender/source/blender/makesrna/intern/rna_fcurve.c:743:19: note: previous definition of 'rna_FKeyframe_points_insert' was here
 static BezTriple *rna_FKeyframe_points_insert(FCurve *fcu, float frame, float value, char keyframe_type, int flag)
                   ^
source/blender/makesrna/intern/CMakeFiles/bf_rna.dir/build.make:690: recipe for target 'source/blender/makesrna/intern/CMakeFiles/bf_rna.dir/rna_fcurve_gen.c.o' failed
make[2]: *** [source/blender/makesrna/intern/CMakeFiles/bf_rna.dir/rna_fcurve_gen.c.o] Error 1
CMakeFiles/Makefile2:6144: recipe for target 'source/blender/makesrna/intern/CMakeFiles/bf_rna.dir/all' failed
make[1]: *** [source/blender/makesrna/intern/CMakeFiles/bf_rna.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....




COMMIT
======
summary | shortlog | log | commit | commitdiff | tree
(parent: b10e3cc) | patch
Keyframing: Added ToolSetting for choosing default keyframe type
author	Joshua Leung <aligorith@gmail.com>	
	Sat, 12 Mar 2016 15:49:26 +0100 (03:49 +1300)
committer	Joshua Leung <aligorith@gmail.com>	
	Sun, 13 Mar 2016 06:28:30 +0100 (18:28 +1300)
commit	570fbba3f33484111a472a835522d5ec30143a7c
tree	061c03e275a602490afccefac1ed98a553ba2a9a	tree | snapshot
parent	b10e3cc9973e415189e9f0cdb6af504c41dd9e41	commit | diff
Keyframing: Added ToolSetting for choosing default keyframe type




diff --git a/source/blender/makesrna/intern/rna_fcurve.c b/source/blender/makesrna/intern/rna_fcurve.c
index 398c9aa..8005075 100644 (file)
--- a/source/blender/makesrna/intern/rna_fcurve.c
+++ b/source/blender/makesrna/intern/rna_fcurve.c
@@ -740,9 +740,9 @@ static void rna_FModifierStepped_end_frame_range(PointerRNA *ptr, float *min, fl
        *max = MAXFRAMEF;
 }
 
-static BezTriple *rna_FKeyframe_points_insert(FCurve *fcu, float frame, float value, int flag)
+static BezTriple *rna_FKeyframe_points_insert(FCurve *fcu, float frame, float value, char keyframe_type, int flag)
 {
-       int index = insert_vert_fcurve(fcu, frame, value, flag | INSERTKEY_NO_USERPREF);
+       int index = insert_vert_fcurve(fcu, frame, value, keyframe_type, flag | INSERTKEY_NO_USERPREF);
        return ((fcu->bezt) && (index >= 0)) ? (fcu->bezt + index) : NULL;
 }
 
@@ -1777,7 +1777,9 @@ static void rna_def_fcurve_keyframe_points(BlenderRNA *brna, PropertyRNA *cprop)
        parm = RNA_def_float(func, "value", 0.0f, -FLT_MAX, FLT_MAX, "",
                             "Y Value of this keyframe point", -FLT_MAX, FLT_MAX);
        RNA_def_property_flag(parm, PROP_REQUIRED);
-
+       
+       RNA_def_enum(func, "keyframe_type", rna_enum_beztriple_keyframe_type_items, 0, "", 
+                    "Type of keyframe to insert");
        RNA_def_enum_flag(func, "options", keyframe_flag_items, 0, "", "Keyframe options");
 
        parm = RNA_def_pointer(func, "keyframe", "Keyframe", "", "Newly created keyframe");

